--- a/src/app/left/left.component.html
+++ b/src/app/left/left.component.html
@@ -6,8 +6,16 @@
       </div>
       
       <div class="w3-container">
-        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Developer in Sesc em Minas</p>
-        <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Grande Belo Horizonte, MG, BR</p>
+        <p>
+          <i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Developer in Sesc em Minas
+        </p>
+        <p>
+          <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Belo Horizonte, MG, BR
+        </p>
+        <p>
+          <i class="fa fa-telegram fa-fw w3-margin-right w3-large w3-text-teal"></i>
+          <a href="https://t.me/robsonpiere">@robsonpiere</a>
+        </p>
         <hr>
 
         <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
@@ -39,7 +47,7 @@
         <div class="w3-light-grey w3-round-xlarge">
           <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
         </div>
-        <p>Spanish</p>
+        <p>English</p>
         <div class="w3-light-grey w3-round-xlarge">
           <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
         </div>
