--- a/src/app/degree/degree.component.html
+++ b/src/app/degree/degree.component.html
@@ -2,20 +2,14 @@
   <h2 class="w3-text-grey w3-padding-16"><i
       class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
   <div class="w3-container">
-    <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
-    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-    <p>Web Development! All I need to know in one place</p>
+    <h5 class="w3-opacity"><b>B.Sc. in Information Systems</b></h5>
+    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2016</h6>
+    <p>Pontifícia Universidade Católica de Minas Gerais</p>
     <hr>
   </div>
   <div class="w3-container">
-    <h5 class="w3-opacity"><b>London Business School</b></h5>
-    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
-    <p>Master Degree</p>
-    <hr>
-  </div>
-  <div class="w3-container">
-    <h5 class="w3-opacity"><b>School of Coding</b></h5>
-    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
-    <p>Bachelor Degree</p><br>
+    <h5 class="w3-opacity"><b>Continued Education Course in Data Sciece / Big Data</b></h5>
+    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017 - 2018</h6>
+    <p>Pontifícia Universidade Católica de Minas Gerais</p>
   </div>
 </div>
